<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hil_serl_hiro_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cdg9914@gmail.com">claudiodelgaizo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <!-- ######### -->
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>control_toolbox</depend>
  <depend>ur_msgs</depend>
  <depend>ur_description</depend>
  <depend>ur_robot_driver</depend>
  <depend>ur_client_library</depend>
  <depend>ros2_control</depend>

  <depend>libcap_dev</depend>

  <!-- ######### -->
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
